update_make_page

--- a/home/wiki/Change_log.html
+++ b/home/wiki/Change_log.html
@@ -265,7 +265,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Redirect formatValue and formatValues to renderSnak and renderSnakValues.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/he.wikipedia.org/wiki/%D7%99%D7%95%D7%91%D7%9C_%D7%A0%D7%90%D7%9E%D7%9F">https://he.wikipedia.org/wiki/יובל_נאמן</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://he.wikipedia.org/wiki/יובל_נאמן" rel="nofollow" class="external free">https://he.wikipedia.org/wiki/יובל_נאמן</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/593" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/593</a>
@@ -281,7 +281,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Do not treat '_' as a SPACE character.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/%D0%B1%D0%B0%D0%B1%D1%8C%D0%B5_%D0%BB%D0%B5%D1%82%D0%BE">https://en.wiktionary.org/wiki/бабье_лето</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/бабье_лето" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/бабье_лето</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/582" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/582</a>
@@ -326,7 +326,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Make table accessible from datawrapper in mw.lua.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/Wiktionary:Japanese_transliteration">https://en.wiktionary.org/wiki/Wiktionary:Japanese_transliteration</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/Wiktionary:Japanese_transliteration" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/Wiktionary:Japanese_transliteration</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/586" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/586</a>
@@ -559,7 +559,7 @@
         <span style='font-variant:small-caps'>Example</span>: A .
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/it.wikipedia.org/wiki/Italo_Toni">https://it.wikipedia.org/wiki/Italo_Toni</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://it.wikipedia.org/wiki/Italo_Toni" rel="nofollow" class="external free">https://it.wikipedia.org/wiki/Italo_Toni</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/567" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/567</a>
@@ -585,7 +585,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Auto-inline dangling references tag.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/tepilli">https://en.wiktionary.org/wiki/tepilli</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/tepilli" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/tepilli</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/583" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/583</a>
@@ -601,7 +601,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Do not assume that Name_ui_w_colon matches Name.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/ja.wikipedia.org/wiki/Template:Stub">https://ja.wikipedia.org/wiki/Template:Stub</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://ja.wikipedia.org/wiki/Template:Stub" rel="nofollow" class="external free">https://ja.wikipedia.org/wiki/Template:Stub</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/594" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/594</a>
@@ -643,7 +643,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Change dynamicPageList to always get categories from cache.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/Category:English_conjunctions">https://en.wiktionary.org/wiki/Category:English_conjunctions</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/Category:English_conjunctions" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/Category:English_conjunctions</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/556" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/556</a>
@@ -656,7 +656,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/Category:English_lemmas">https://en.wiktionary.org/wiki/Category:English_lemmas</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/Category:English_lemmas" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/Category:English_lemmas</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/556" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/556</a>
@@ -725,7 +725,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/it.wikipedia.org/wiki/Roma">https://en.wikipedia.org/wiki/it:Roma</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/it.wikipedia.org/wiki/Roma" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/it:Roma</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/600" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/600</a>
@@ -1332,7 +1332,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikiversity.org/wiki/Web_Science/Part2:_Emerging_Web_Properties/Hearding_Behavior/Summary,_Further_readings,_Homework">https://en.wikiversity.org/wiki/Web_Science/Part2:_Emerging_Web_Properties/Hearding_Behavior/Summary,_Further_readings,_Homework</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikiversity.org/wiki/Web_Science/Part2:_Emerging_Web_Properties/Hearding_Behavior/Summary,_Further_readings,_Homework" rel="nofollow" class="external free">https://en.wikiversity.org/wiki/Web_Science/Part2:_Emerging_Web_Properties/Hearding_Behavior/Summary,_Further_readings,_Homework</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/475" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/475</a>
@@ -1667,7 +1667,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Add templatestyles to html.head.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikiversity.org/wiki/WikiJournal_Preprints/Binary_search_algorithm">https://en.wikiversity.org/wiki/WikiJournal_Preprints/Binary_search_algorithm</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikiversity.org/wiki/WikiJournal_Preprints/Binary_search_algorithm" rel="nofollow" class="external free">https://en.wikiversity.org/wiki/WikiJournal_Preprints/Binary_search_algorithm</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/314" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/314</a>
@@ -1796,7 +1796,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Pull 0th argument if %1 is specified and 0 groups.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/Wiktionary:Scripts">https://en.wiktionary.org/wiki/Wiktionary:Scripts</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/Wiktionary:Scripts" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/Wiktionary:Scripts</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/393" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/393</a>
@@ -2002,7 +2002,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Replace underscores with spaces in subpages.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikiversity.org/wiki/Computer-aided_design/Software">https://en.wikiversity.org/wiki/Computer-aided_design/Software</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikiversity.org/wiki/Computer-aided_design/Software" rel="nofollow" class="external free">https://en.wikiversity.org/wiki/Computer-aided_design/Software</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/308" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/308</a>
@@ -2015,7 +2015,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikiversity.org/wiki/Computer-aided_design/Software">https://en.wikiversity.org/wiki/Computer-aided_design/Software</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikiversity.org/wiki/Computer-aided_design/Software" rel="nofollow" class="external free">https://en.wikiversity.org/wiki/Computer-aided_design/Software</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/308" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/308</a>
@@ -2031,7 +2031,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Do not hzip anchors with invalid href.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikiversity.org/wiki/Research_in_programming_Wikidata/Banks">https://en.wikiversity.org/wiki/Research_in_programming_Wikidata/Banks</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikiversity.org/wiki/Research_in_programming_Wikidata/Banks" rel="nofollow" class="external free">https://en.wikiversity.org/wiki/Research_in_programming_Wikidata/Banks</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/311" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/311</a>
@@ -2057,7 +2057,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Pass count into category msg .
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikiversity.org/wiki/WikiJournal_Preprints/Binary_search_algorithm">https://en.wikiversity.org/wiki/WikiJournal_Preprints/Binary_search_algorithm</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikiversity.org/wiki/WikiJournal_Preprints/Binary_search_algorithm" rel="nofollow" class="external free">https://en.wikiversity.org/wiki/WikiJournal_Preprints/Binary_search_algorithm</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/316" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/316</a>
@@ -2248,7 +2248,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Change div_view_fmtr to be sitename aware.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikiversity.org/wiki/">https://en.wikiversity.org</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikiversity.org" rel="nofollow" class="external free">https://en.wikiversity.org</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/313" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/313</a>
@@ -2439,7 +2439,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Increment math uid.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikiversity.org/wiki/Electric_Circuit_Analysis/Passive_Sign_Convention">https://en.wikiversity.org/wiki/Electric_Circuit_Analysis/Passive_Sign_Convention</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikiversity.org/wiki/Electric_Circuit_Analysis/Passive_Sign_Convention" rel="nofollow" class="external free">https://en.wikiversity.org/wiki/Electric_Circuit_Analysis/Passive_Sign_Convention</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/375" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/375</a>
