--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -255,7 +255,7 @@
         (change) Parser: {{lc}} now handles multi-byte characters. See: <a href="/site/fr.wikipedia.org/wiki/%CA%BFAmr_ibn_Kult%CC%A0h%C5%ABm">http://fr.wikipedia.org/wiki/%CA%BFAmr_ibn_Kult%CC%A0h%C5%ABm</a>
       </li>
       <li>
-        (change) Parser: {{anchorencode}} now supports templates, literal links; EX:{{#anchorencode:{{A}}}} {{#anchorencode:[[:A]]}}. See: <a href="/site/en.wiktionary.org/wiki/%CE%BC">http://en.wiktionary.org/wiki/μ</a>
+        (change) Parser: {{anchorencode}} now supports templates, literal links; EX:{{#anchorencode:{{A}}}} {{#anchorencode:[[:A]]}}. See: <a href="http://en.wiktionary.org/wiki/μ" rel="nofollow" class="external free">http://en.wiktionary.org/wiki/μ</a>
       </li>
       <li>
         (change) Scribunto: GetUrl should accept multiple key vals for query args; EX:action=edit, preload=Modèle:Documentation/Preload2. See: <a href="/site/fr.wikipedia.org/wiki/Wikipedia:Image_du_jour/Date">http://fr.wikipedia.org/wiki/Wikipedia:Image_du_jour/Date</a>
@@ -422,7 +422,7 @@
         (dev) Category: Category error should not cause malformed HTML. See: <a href="/site/en.wikipedia.org/wiki/Category:Planets_of_the_Solar_System">http://en.wikipedia.org/wiki/Category:Planets_of_the_Solar_System</a>
       </li>
       <li>
-        (dev) Scribunto: Gsub should call once for all matches; not once per match. See: <a href="/site/en.wiktionary.org/wiki/Minnesota_nice">http://en.wiktionary.org/wiki/Minnesota_nice</a>
+        (dev) Scribunto: Gsub should call once for all matches; not once per match. See: <a href="http://en.wiktionary.org/wiki/Minnesota_nice" rel="nofollow" class="external free">http://en.wiktionary.org/wiki/Minnesota_nice</a>
       </li>
       <li>
         (change) Server: Http server did not work on Windows 64 / Linux 64 {detected by Miles}.
@@ -504,7 +504,7 @@
         (change) Html: Anonymous and Talk links in upper left hand corner suppressed; EX:/xowa/xowa.gfs.
       </li>
       <li>
-        (change) File: Wikinews should prioritize local over remote for images. See: <a href="/site/en.wikinews.org/wiki/Endangered_%27Asian_unicorn%27_sighted">http://en.wikinews.org/wiki/Endangered_'Asian_unicorn'_sighted</a>
+        (change) File: Wikinews should prioritize local over remote for images. See: <a href="http://en.wikinews.org/wiki/Endangered_'Asian_unicorn'_sighted" rel="nofollow" class="external free">http://en.wikinews.org/wiki/Endangered_'Asian_unicorn'_sighted</a>
       </li>
       <li>
         (change) Category: Error should not cause page to stop loading.
@@ -556,7 +556,7 @@
         (change) Options: Added <a href="http://xowa.org/home/wiki/Options/Config_script" id="xolnki_11" title="Options/Config script">Options/Config_script</a>.
       </li>
       <li>
-        (change) Scribunto: Gsub was not handling lua callback functions correctly; EX:[[Minnesota]] [[nice]] and regx of %[%[([^#|%]]-)%]%]. See: <a href="/site/en.wiktionary.org/wiki/Minnesota_nice">http://en.wiktionary.org/wiki/Minnesota_nice</a>
+        (change) Scribunto: Gsub was not handling lua callback functions correctly; EX:[[Minnesota]] [[nice]] and regx of %[%[([^#|%]]-)%]%]. See: <a href="http://en.wiktionary.org/wiki/Minnesota_nice" rel="nofollow" class="external free">http://en.wiktionary.org/wiki/Minnesota_nice</a>
       </li>
       <li>
         (add) Import: Added new wikis to import list: zh-classical.wikipedia.org; zh-min-nan.wiktionary.org; zh-min-nan.wikipedia.org; zh-yue.wikipedia.org; bat-smg.wikipedia.org; be-x-old.wikipedia.org; cbk-zam.wikipedia.org; fiu-vro.wikipedia.org; map-bms.wikipedia.org; roa-rup.wikipedia.org; roa-rup.wiktionary.org; .
@@ -820,7 +820,7 @@
         (add) Image: Offline audio files for simplewiki 2013-10-14 (&lt; 2 MB).
       </li>
       <li>
-        (done) Scribunto: English Wiktionary fails on multiple articles with "table from mw.loadData is read-only"; EX:/xowa/bin/any/lua/mediawiki/extensions/Scribunto/engines/LuaCommon/lualib/mw.lua. See: <a href="/site/en.wiktionary.org/wiki/-ability">http://en.wiktionary.org/wiki/-ability</a>
+        (done) Scribunto: English Wiktionary fails on multiple articles with "table from mw.loadData is read-only"; EX:/xowa/bin/any/lua/mediawiki/extensions/Scribunto/engines/LuaCommon/lualib/mw.lua. See: <a href="http://en.wiktionary.org/wiki/-ability" rel="nofollow" class="external free">http://en.wiktionary.org/wiki/-ability</a>
       </li>
       <li>
         (fix) [broken since:v0.10.1] Wikisource: &lt;pages&gt; tag does not work for non-English wikisources {detected by Schnark}.
@@ -837,7 +837,7 @@
         (add) Edit: Pages can be renamed {requested by anonymous4}.
       </li>
       <li>
-        (done) Scribunto: Invalid regex should not throw error; EX:[^]. See: <a href="/site/en.wiktionary.org/wiki/%E3%80%86%E3%82%8B">http://en.wiktionary.org/wiki/〆る</a>
+        (done) Scribunto: Invalid regex should not throw error; EX:[^]. See: <a href="http://en.wiktionary.org/wiki/〆る" rel="nofollow" class="external free">http://en.wiktionary.org/wiki/〆る</a>
       </li>
       <li>
         (done) Wikidata: Handle properties with value type of "bad" instead of "globecoordinate". See: <a href="/site/en.wikipedia.org/wiki/%27s-Graveland">http://en.wikipedia.org/wiki/'s-Graveland</a> <a href="/site/www.wikidata.org/wiki/Q1615351">http://www.wikidata.org/wiki/Q1615351</a>
@@ -880,10 +880,10 @@
         (done) Log: Do not log application header to session.txt.
       </li>
       <li>
-        (done) Css: English Wiktionary css displayed Entry tab box incorrectly; EX:/xowa/bin/any/html/xowa/import/xowa_common_ltr.css. See: <a href="/site/en.wiktionary.org/wiki/MediaWiki:Common.css">http://en.wiktionary.org/wiki/MediaWiki:Common.css</a>
+        (done) Css: English Wiktionary css displayed Entry tab box incorrectly; EX:/xowa/bin/any/html/xowa/import/xowa_common_ltr.css. See: <a href="http://en.wiktionary.org/wiki/MediaWiki:Common.css" rel="nofollow" class="external free">http://en.wiktionary.org/wiki/MediaWiki:Common.css</a>
       </li>
       <li>
-        (done) Lua: Gsub replace should not fail if replace term is not supplied. See: <a href="/site/en.wiktionary.org/wiki/%27orse">http://en.wiktionary.org/wiki/'orse</a>
+        (done) Lua: Gsub replace should not fail if replace term is not supplied. See: <a href="http://en.wiktionary.org/wiki/'orse" rel="nofollow" class="external free">http://en.wiktionary.org/wiki/'orse</a>
       </li>
     </ul>
     <h2>
@@ -1302,7 +1302,7 @@
         (done) Parser: TOC now ignores refs in listing; EX:__FORCETOC__\n==A&lt;ref&gt;{{complicated_template}}&lt;/ref&gt;== -&gt; ref shows in &lt;h2&gt; but not in TOC.
       </li>
       <li>
-        (done) Parser: * &lt;li&gt; should ignore redundant list item; EX:* &lt;li&gt;a&lt;/li&gt; -&gt; * a. See: <a href="/site/it.wikipedia.org/wiki/Milano">http://it.wikipedia.org/wiki/Milano#Bibliographie</a>
+        (done) Parser: * &lt;li&gt; should ignore redundant list item; EX:* &lt;li&gt;a&lt;/li&gt; -&gt; * a. See: <a href="http://it.wikipedia.org/wiki/Milano#Bibliographie" rel="nofollow" class="external free">http://it.wikipedia.org/wiki/Milano#Bibliographie</a>
       </li>
       <li>
         (done) Import: species wiki was not downloading from Import/Script page {detected by hidp123}.
