--- a/home/wiki/Change_log/2015.html
+++ b/home/wiki/Change_log/2015.html
@@ -443,7 +443,7 @@
     </p>
     <ul>
       <li>
-        ParserFunctions: Calculate correct Hebrew date (affects script error on many he.w pages). See: <a href="/site/he.wikipedia.org/wiki/%D7%9E%D7%94%D7%A8%22%D7%9C_%D7%9E%D7%A4%D7%A8%D7%90%D7%92">https://he.wikipedia.org/wiki/מהר"ל_מפראג</a> <a href="/site/he.wikipedia.org/wiki/%D7%A8%D7%A9">https://he.wikipedia.org/wiki/רש</a>"י <a href="/site/he.wikipedia.org/wiki/%D7%90%D7%91%D7%A8%D7%94%D7%9D_%D7%99%D7%A6%D7%97%D7%A7_%D7%94%D7%9B%D7%94%D7%9F_%D7%A7%D7%95%D7%A7">https://he.wikipedia.org/wiki/אברהם_יצחק_הכהן_קוק</a> <a href="/site/he.wikipedia.org/wiki/%D7%90%D7%9C%D7%A2%D7%96%D7%A8_%D7%9E%D7%A0%D7%97%D7%9D_%D7%9E%D7%9F_%D7%A9%D7%9A">https://he.wikipedia.org/wiki/אלעזר_מנחם_מן_שך</a> <a href="/site/he.wikipedia.org/wiki/%D7%95%D7%99%D7%A7%D7%99%D7%A4%D7%93%D7%99%D7%94:%D7%A2%D7%9E%D7%95%D7%93_%D7%A8%D7%90%D7%A9%D7%99/%D7%9E%D7%A7%D7%91%D7%A5_%D7%A2%D7%A8%D7%9B%D7%99%D7%9D">https://he.wikipedia.org/wiki/ויקיפדיה:עמוד_ראשי/מקבץ_ערכים</a>
+        ParserFunctions: Calculate correct Hebrew date (affects script error on many he.w pages). See: <a href="https://he.wikipedia.org/wiki/מהר&quot;ל_מפראג" rel="nofollow" class="external free">https://he.wikipedia.org/wiki/מהר"ל_מפראג</a> <a href="https://he.wikipedia.org/wiki/רש" rel="nofollow" class="external free">https://he.wikipedia.org/wiki/רש</a>"י <a href="https://he.wikipedia.org/wiki/אברהם_יצחק_הכהן_קוק" rel="nofollow" class="external free">https://he.wikipedia.org/wiki/אברהם_יצחק_הכהן_קוק</a> <a href="https://he.wikipedia.org/wiki/אלעזר_מנחם_מן_שך" rel="nofollow" class="external free">https://he.wikipedia.org/wiki/אלעזר_מנחם_מן_שך</a> <a href="https://he.wikipedia.org/wiki/ויקיפדיה:עמוד_ראשי/מקבץ_ערכים" rel="nofollow" class="external free">https://he.wikipedia.org/wiki/ויקיפדיה:עמוד_ראשי/מקבץ_ערכים</a>
       </li>
       <li>
         ParserFunctions.Grammar: Implement Hebrew grammar (affects sidebar showing grammar for some Hebrew wikis). See: <a href="https://he.wikibooks.org/wiki/עמוד_ראשי" rel="nofollow" class="external free">https://he.wikibooks.org/wiki/עמוד_ראשי</a>
@@ -477,7 +477,7 @@
         Xml_dump: Use &lt;siteinfo&gt;'s &lt;case&gt;, if case attribute is not available at "&lt;namespace&gt;" level (affects some xml dumps not being importable) {detected by paul2520}. See: <a href="https://dumps.wikimedia.org/sep11wiki" rel="nofollow" class="external free">https://dumps.wikimedia.org/sep11wiki</a>
       </li>
       <li>
-        Parser.Lnki: Use 1st imagetype argument when multiple are listed of "thumb|frame|frameless" (affects some pages showing incorrectly sized images); EX:[[File:A.png|thumb|frame]] -&gt; thumb x&gt; frame. See: <a href="/site/he.wikipedia.org/wiki/%D7%9E%D7%A1%D7%A4%D7%9F_%D7%94%D7%9E%D7%95%D7%93%D7%99%D7%A2%D7%99%D7%9F">https://he.wikipedia.org/wiki/מספן_המודיעין</a>
+        Parser.Lnki: Use 1st imagetype argument when multiple are listed of "thumb|frame|frameless" (affects some pages showing incorrectly sized images); EX:[[File:A.png|thumb|frame]] -&gt; thumb x&gt; frame. See: <a href="https://he.wikipedia.org/wiki/מספן_המודיעין" rel="nofollow" class="external free">https://he.wikipedia.org/wiki/מספן_המודיעין</a>
       </li>
     </ul>
     <p>
@@ -1313,10 +1313,10 @@
     </p>
     <ul>
       <li>
-        Scribunto.Wikibase: Always use v2 entity style (affects several pages in ja.w showing script error when using Module:Location_map ) {detected by gnosygnu.build.warning}. See: <a href="/site/ja.wikipedia.org/wiki/%E6%9D%B1%E4%BA%AC%E7%AB%B6%E9%A6%AC%E5%A0%B4">https://ja.wikipedia.org/wiki/東京競馬場</a>
+        Scribunto.Wikibase: Always use v2 entity style (affects several pages in ja.w showing script error when using Module:Location_map ) {detected by gnosygnu.build.warning}. See: <a href="https://ja.wikipedia.org/wiki/東京競馬場" rel="nofollow" class="external free">https://ja.wikipedia.org/wiki/東京競馬場</a>
       </li>
       <li>
-        Scribunto.Wikibase: Update .lua files to latest version (affects several pages in ja.w showing script error when using Module:Location_map ); EX:bin\any\xowa\xtns\Scribunto\engines\LuaCommon\lualib\mw.wikibase* {detected by gnosygnu.build.warning}. See: <a href="/site/ja.wikipedia.org/wiki/%E6%9D%B1%E4%BA%AC%E7%AB%B6%E9%A6%AC%E5%A0%B4">https://ja.wikipedia.org/wiki/東京競馬場</a>
+        Scribunto.Wikibase: Update .lua files to latest version (affects several pages in ja.w showing script error when using Module:Location_map ); EX:bin\any\xowa\xtns\Scribunto\engines\LuaCommon\lualib\mw.wikibase* {detected by gnosygnu.build.warning}. See: <a href="https://ja.wikipedia.org/wiki/東京競馬場" rel="nofollow" class="external free">https://ja.wikipedia.org/wiki/東京競馬場</a>
       </li>
       <li>
         Scribunto: Support Lua frontier pattern %f (affects none known); EX:gsub('thE QUICK brOWN FOx JUMPS', '%f[%a]%u+%f[%A]', '-') -&gt; 'thE - brOWN FOx -'. See: <a href="http://lua-users.org/wiki/FrontierPattern" rel="nofollow" class="external free">http://lua-users.org/wiki/FrontierPattern</a>
@@ -1337,7 +1337,7 @@
         ParserFunctions: Change scale for Decimal from 28 to 14.
       </li>
       <li>
-        Title: Convert extended whitespace characters to whitespace (affects several pages in ja.w showing script error when using Module:Location_map ) {detected by gnosygnu.build.warning}. See: <a href="/site/ja.wikipedia.org/wiki/%E3%82%B8%E3%83%A7%E3%83%BC%E3%82%B8%E6%B9%96%E3%81%AE%E6%88%A6%E3%81%84">https://ja.wikipedia.org/wiki/ジョージ湖の戦い</a> <a href="/site/ja.wikipedia.org/wiki/Template:Location_map_USA%E3%80%80New_York">https://ja.wikipedia.org/wiki/Template:Location_map_USA　New_York</a>
+        Title: Convert extended whitespace characters to whitespace (affects several pages in ja.w showing script error when using Module:Location_map ) {detected by gnosygnu.build.warning}. See: <a href="https://ja.wikipedia.org/wiki/ジョージ湖の戦い" rel="nofollow" class="external free">https://ja.wikipedia.org/wiki/ジョージ湖の戦い</a> <a href="https://ja.wikipedia.org/wiki/Template:Location_map_USA　New_York" rel="nofollow" class="external free">https://ja.wikipedia.org/wiki/Template:Location_map_USA　New_York</a>
       </li>
     </ul>
     <p>
@@ -2563,7 +2563,7 @@
     </p>
     <ul>
       <li>
-        File: Continue loading files if indicator appears on page (affects files not loading on pages with indicator). See: <a href="/site/it.wikipedia.org/wiki/Storia_della_Corsica">https://it.wikipedia.org/wiki/Storia_della_Corsica</a>
+        File: Continue loading files if indicator appears on page (affects files not loading on pages with indicator). See: <a href="https://it.wikipedia.org/wiki/Storia_della_Corsica" rel="nofollow" class="external free">https://it.wikipedia.org/wiki/Storia_della_Corsica</a>
       </li>
       <li>
         Gui: Update wiki when moving back from one wiki to another (affects urls not working); EX:Load XOWA -&gt; Go to s.w: -&gt; Press Back -&gt; Click any link. [broken since:v2.2.4]
@@ -2627,7 +2627,7 @@
     </p>
     <ul>
       <li>
-        Scribunto: Do not treat raw messages returning empty string as an error (affects 21 it.w pages generating error messages in log); EX:raw={{Blank}} -&gt; "" -&gt; error in log. See: <a href="/site/it.wikipedia.org/wiki/L%27Internazionale">https://it.wikipedia.org/wiki/L'Internazionale</a>
+        Scribunto: Do not treat raw messages returning empty string as an error (affects 21 it.w pages generating error messages in log); EX:raw={{Blank}} -&gt; "" -&gt; error in log. See: <a href="https://it.wikipedia.org/wiki/L'Internazionale" rel="nofollow" class="external free">https://it.wikipedia.org/wiki/L'Internazionale</a>
       </li>
     </ul>
     <p>
@@ -2804,7 +2804,7 @@
     </p>
     <ul>
       <li>
-        Scribunto.Regex: Return "" not nil if text is "" and regex is "?" (affects 7 en.d pages with script error). See: <a href="/site/en.wiktionary.org/wiki/%E6%B0%91">https://en.wiktionary.org/wiki/民</a> <a href="/site/en.wiktionary.org/wiki/%E7%89%A9">https://en.wiktionary.org/wiki/物</a> <a href="/site/en.wiktionary.org/wiki/%E5%88%86%E5%AE%B6">https://en.wiktionary.org/wiki/分家</a> <a href="/site/en.wiktionary.org/wiki/%E8%85%8A%E8%82%89">https://en.wiktionary.org/wiki/腊肉</a> <a href="/site/en.wiktionary.org/wiki/%D0%BD%D0%B5%D0%BC%D0%BD%D0%BE%D0%B3%D0%B8%D0%B5">https://en.wiktionary.org/wiki/немногие</a> <a href="/site/en.wiktionary.org/wiki/%D0%BD%D0%BE%D0%B2%D0%BE%D1%81%D1%82%D0%B8">https://en.wiktionary.org/wiki/новости</a> <a href="/site/en.wiktionary.org/wiki/%D0%BE%D1%82%D1%80%D1%83%D0%B1%D0%B8">https://en.wiktionary.org/wiki/отруби</a>
+        Scribunto.Regex: Return "" not nil if text is "" and regex is "?" (affects 7 en.d pages with script error). See: <a href="https://en.wiktionary.org/wiki/民" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/民</a> <a href="https://en.wiktionary.org/wiki/物" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/物</a> <a href="https://en.wiktionary.org/wiki/分家" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/分家</a> <a href="https://en.wiktionary.org/wiki/腊肉" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/腊肉</a> <a href="https://en.wiktionary.org/wiki/немногие" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/немногие</a> <a href="https://en.wiktionary.org/wiki/новости" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/новости</a> <a href="https://en.wiktionary.org/wiki/отруби" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/отруби</a>
       </li>
     </ul>
     <p>
