--- a/home/wiki/Change_log/2016.html
+++ b/home/wiki/Change_log/2016.html
@@ -988,7 +988,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Always reload page when going back / forward on wikinews (do not use cached html).
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikinews.org/wiki/">https://en.wikinews.org/wiki</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikinews.org/wiki" rel="nofollow" class="external free">https://en.wikinews.org/wiki</a>
       </dd>
     </dl>
     <ul>
@@ -1196,7 +1196,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Remove nil element from table when nil is 1st member.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/%E4%BB%9A">https://en.wiktionary.org/wiki/仚</a> <a href="/site/en.wiktionary.org/wiki/%E4%BB%9B">https://en.wiktionary.org/wiki/仛</a><a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj" id="xolnki_19" title="Diagnostics/Scribunto/Luaj" class="xowa-visited">Diagnostics/Scribunto/Luaj</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/仚" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/仚</a> <a href="https://en.wiktionary.org/wiki/仛" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/仛</a><a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj" id="xolnki_19" title="Diagnostics/Scribunto/Luaj" class="xowa-visited">Diagnostics/Scribunto/Luaj</a>
       </dd>
     </dl>
     <ul>
@@ -1253,7 +1253,7 @@
         <span style='font-variant:small-caps'>Example</span>: category={{{2}}}.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikinews.org/wiki/Egypt">https://en.wikinews.org/wiki/Egypt</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikinews.org/wiki/Egypt" rel="nofollow" class="external free">https://en.wikinews.org/wiki/Egypt</a>
       </dd>
     </dl>
     <ul>
@@ -1263,7 +1263,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikinews.org/wiki/Egypt">https://en.wikinews.org/wiki/Egypt</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikinews.org/wiki/Egypt" rel="nofollow" class="external free">https://en.wikinews.org/wiki/Egypt</a>
       </dd>
     </dl>
     <ul>
@@ -1350,7 +1350,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikinews.org/wiki/Egypt">https://en.wikinews.org/wiki/Egypt</a> <a href="/site/en.wikinews.org/wiki/Template:Topic_cat/latest">https://en.wikinews.org/wiki/Template:Topic_cat/latest</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikinews.org/wiki/Egypt" rel="nofollow" class="external free">https://en.wikinews.org/wiki/Egypt</a> <a href="https://en.wikinews.org/wiki/Template:Topic_cat/latest" rel="nofollow" class="external free">https://en.wikinews.org/wiki/Template:Topic_cat/latest</a>
       </dd>
     </dl>
     <ul>
@@ -2258,7 +2258,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps" id="xolnki_33" title="Dev/Command-line/Dumps">Dev/Command-line/Dumps</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps" id="xolnki_33" title="Dev/Command-line/Dumps" class="xowa-visited">Dev/Command-line/Dumps</a>
       </dd>
     </dl>
     <ul>
@@ -3446,7 +3446,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Include "mediawiki.page.gallery.css" if page has gallery.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/head">https://en.wiktionary.org/wiki/head</a> <a href="/site/en.wiktionary.org/wiki/A">https://en.wiktionary.org/wiki/A</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/head" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/head</a> <a href="https://en.wiktionary.org/wiki/A" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/A</a>
       </dd>
     </dl>
     <p>
@@ -3497,7 +3497,7 @@
         <span style='font-variant:small-caps'>Example</span>: {{:missing}} -&gt; [[:missing]] x&gt; [[Template:Missing]].
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/a">https://en.wiktionary.org/wiki/a</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/a" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/a</a>
       </dd>
     </dl>
     <ul>
@@ -3515,7 +3515,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Add "kok" lang.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/%E0%A4%A8%E0%A5%87%E0%A4%AA%E0%A4%BE%E0%A4%B3">https://en.wiktionary.org/wiki/नेपाळ</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/नेपाळ" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/नेपाळ</a>
       </dd>
     </dl>
     <p>
@@ -4029,7 +4029,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Implement basic functionality for {{#categorytree}}.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/a-">https://en.wiktionary.org/wiki/a-</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/a-" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/a-</a>
       </dd>
     </dl>
     <ul>
@@ -4042,7 +4042,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Add entries for null value arguments. Example: [2:'b'] -&gt; [1:null,2:'b'].
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/Category:Nouns_by_language">https://en.wiktionary.org/wiki/Category:Nouns_by_language</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/Category:Nouns_by_language" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/Category:Nouns_by_language</a>
       </dd>
     </dl>
     <ul>
@@ -4055,7 +4055,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Always convert replace-arg to string when gsub uses callback function.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/seven">https://en.wiktionary.org/wiki/seven</a> <a href="/site/en.wiktionary.org/wiki/four">https://en.wiktionary.org/wiki/four</a> <a href="/site/en.wiktionary.org/wiki/eight">https://en.wiktionary.org/wiki/eight</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/seven" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/seven</a> <a href="https://en.wiktionary.org/wiki/four" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/four</a> <a href="https://en.wiktionary.org/wiki/eight" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/eight</a>
       </dd>
     </dl>
     <ul>
@@ -4068,7 +4068,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Return correct data structure for interwikiMap.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/Wiktionary:Public_domain_sources">https://en.wiktionary.org/wiki/Wiktionary:Public_domain_sources</a> <a href="/site/en.wiktionary.org/wiki/Wiktionary:Quotations/Templates">https://en.wiktionary.org/wiki/Wiktionary:Quotations/Templates</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/Wiktionary:Public_domain_sources" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/Wiktionary:Public_domain_sources</a> <a href="https://en.wiktionary.org/wiki/Wiktionary:Quotations/Templates" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/Wiktionary:Quotations/Templates</a>
       </dd>
     </dl>
     <ul>
@@ -4081,7 +4081,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Handle UCS chars at end of array.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/one">https://en.wiktionary.org/wiki/one</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/one" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/one</a>
       </dd>
     </dl>
     <ul>
@@ -4107,7 +4107,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Use case-sensitivity of url wiki not current wiki.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/one">https://en.wiktionary.org/wiki/one</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/one" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/one</a>
       </dd>
     </dl>
     <p>
@@ -4814,7 +4814,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Change mediawiki.gadget.navframe.js to explicitly set style.display.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/green">https://en.wiktionary.org/wiki/green</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/green" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/green</a>
       </dd>
     </dl>
     <p>
@@ -4966,13 +4966,13 @@
     </p>
     <ul>
       <li>
-        Luaj: Return position as int not string when using "()" regex (resolves script error on several dozen en.d / ru.d pages ("attempt to compare string with number expected, got string")). See: <a href="/site/en.wiktionary.org/wiki/%D0%BA">https://en.wiktionary.org/wiki/к</a> <a href="/site/en.wiktionary.org/wiki/%D0%BA%D0%B0%D0%B3%D0%B5%D0%B1%D0%B5%D1%88%D0%BD%D0%B8%D0%BA">https://en.wiktionary.org/wiki/кагебешник</a> <a href="https://ru.wiktionary.org/wiki/плавлавка" rel="nofollow" class="external free">https://ru.wiktionary.org/wiki/плавлавка</a>
+        Luaj: Return position as int not string when using "()" regex (resolves script error on several dozen en.d / ru.d pages ("attempt to compare string with number expected, got string")). See: <a href="https://en.wiktionary.org/wiki/к" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/к</a> <a href="https://en.wiktionary.org/wiki/кагебешник" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/кагебешник</a> <a href="https://ru.wiktionary.org/wiki/плавлавка" rel="nofollow" class="external free">https://ru.wiktionary.org/wiki/плавлавка</a>
       </li>
       <li>
-        Scribunto: Handle nested gsub calls when using callback functions (resolves script error on a few dozen en.d pages ("Unrecognized 3ms suffix pattern.")). See: <a href="/site/en.wiktionary.org/wiki/%D7%9B%D7%9C%D7%91">https://en.wiktionary.org/wiki/כלב</a>
+        Scribunto: Handle nested gsub calls when using callback functions (resolves script error on a few dozen en.d pages ("Unrecognized 3ms suffix pattern.")). See: <a href="https://en.wiktionary.org/wiki/כלב" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/כלב</a>
       </li>
       <li>
-        Luaj: Handle multi-byte chars in lua variables (resolves script error on a few dozen en.d pages ("attempt to concatenate nil and string")). See: <a href="/site/en.wiktionary.org/wiki/%E3%81%A9%E3%81%86">https://en.wiktionary.org/wiki/どう</a> <a href="/site/en.wiktionary.org/wiki/%EB%A5%BC">https://en.wiktionary.org/wiki/를</a>
+        Luaj: Handle multi-byte chars in lua variables (resolves script error on a few dozen en.d pages ("attempt to concatenate nil and string")). See: <a href="https://en.wiktionary.org/wiki/どう" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/どう</a> <a href="https://en.wiktionary.org/wiki/를" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/를</a>
       </li>
       <li>
         Hzip: Handle jtidy moving &lt;span class='headline'&gt; outside of &lt;h#&gt; tag in rare combination of &lt;center&gt;, &lt;span&gt;, &lt;div&gt; (resolves a few dozen pages in en.s not showing). See: <a href="https://en.wikisource.org/wiki/On_the_Vital_Principle/Whole_text" rel="nofollow" class="external free">https://en.wikisource.org/wiki/On_the_Vital_Principle/Whole_text</a> <a href="https://en.wikisource.org/wiki/Avenarius_and_the_Standpoint_of_Pure_Experience/1" rel="nofollow" class="external free">https://en.wikisource.org/wiki/Avenarius_and_the_Standpoint_of_Pure_Experience/1</a>
@@ -4983,13 +4983,13 @@
     </p>
     <ul>
       <li>
-        Scribunto: Handle multi-byte characters for lua bracketed regular expressions (resolves nothing known). See: <a href="/site/en.wiktionary.org/wiki/%E3%81%A9%E3%81%86">https://en.wiktionary.org/wiki/どう</a> <a href="/site/en.wiktionary.org/wiki/%EB%A5%BC">https://en.wiktionary.org/wiki/를</a>
+        Scribunto: Handle multi-byte characters for lua bracketed regular expressions (resolves nothing known). See: <a href="https://en.wiktionary.org/wiki/どう" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/どう</a> <a href="https://en.wiktionary.org/wiki/를" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/를</a>
       </li>
       <li>
         Luaj: Use HOUR_OF_DAY for os.time, not HOUR (resolves hour off by 12 for os.time calls). See: <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj" id="xolnki_67" title="Diagnostics/Scribunto/Luaj" class="xowa-visited">Diagnostics/Scribunto/Luaj</a>
       </li>
       <li>
-        Xtns.Dpl: Write href using full_db not page_txt; EX:Category:A B -&gt; Category:A_B x&gt; A B. See: <a href="/site/en.wikiquote.org/wiki/Wikiquote:Speedy_deletions">https://en.wikiquote.org/wiki/Wikiquote:Speedy_deletions</a>
+        Xtns.Dpl: Write href using full_db not page_txt; EX:Category:A B -&gt; Category:A_B x&gt; A B. See: <a href="https://en.wikiquote.org/wiki/Wikiquote:Speedy_deletions" rel="nofollow" class="external free">https://en.wikiquote.org/wiki/Wikiquote:Speedy_deletions</a>
       </li>
       <li>
         Xtns.Dpl: Encode quotes in href title (resolves broken links if page title has quotes). See: <a href="https://en.wikibooks.org/wiki/Wikibooks:Alphabetical_classification/All_Books" rel="nofollow" class="external free">https://en.wikibooks.org/wiki/Wikibooks:Alphabetical_classification/All_Books</a>
@@ -5006,7 +5006,7 @@
         Hzip: Write file-title with correct case-sensitivity for wikis with a case-sensitive [[File:]] namespace.
       </li>
       <li>
-        Html: Never change title bytes when passed to Xof_file_wkr_.Ttl_standardize(title) (nothing known in pc; affects hzip check for image links). See: <a href="/site/en.wiktionary.org/wiki/freedom_of_speech">https://en.wiktionary.org/wiki/freedom_of_speech</a>
+        Html: Never change title bytes when passed to Xof_file_wkr_.Ttl_standardize(title) (nothing known in pc; affects hzip check for image links). See: <a href="https://en.wiktionary.org/wiki/freedom_of_speech" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/freedom_of_speech</a>
       </li>
     </ul>
     <p>
@@ -5051,7 +5051,7 @@
     </p>
     <ul>
       <li>
-        Command-line: Expand instructions for generating HTML dumps. See: <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps" id="xolnki_68" title="Dev/Command-line/Dumps">Dev/Command-line/Dumps</a>
+        Command-line: Expand instructions for generating HTML dumps. See: <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps" id="xolnki_68" title="Dev/Command-line/Dumps" class="xowa-visited">Dev/Command-line/Dumps</a>
       </li>
     </ul>
     <p>
