--- a/home/wiki/Change_log/v3.6.4.1.html
+++ b/home/wiki/Change_log/v3.6.4.1.html
@@ -184,7 +184,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Include "mediawiki.page.gallery.css" if page has gallery.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/head">https://en.wiktionary.org/wiki/head</a> <a href="/site/en.wiktionary.org/wiki/A">https://en.wiktionary.org/wiki/A</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/head" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/head</a> <a href="https://en.wiktionary.org/wiki/A" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/A</a>
       </dd>
     </dl>
     <p>
@@ -235,7 +235,7 @@
         <span style='font-variant:small-caps'>Example</span>: {{:missing}} -&gt; [[:missing]] x&gt; [[Template:Missing]].
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/a">https://en.wiktionary.org/wiki/a</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/a" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/a</a>
       </dd>
     </dl>
     <ul>
@@ -253,7 +253,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Add "kok" lang.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/%E0%A4%A8%E0%A5%87%E0%A4%AA%E0%A4%BE%E0%A4%B3">https://en.wiktionary.org/wiki/नेपाळ</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/नेपाळ" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/नेपाळ</a>
       </dd>
     </dl>
     <p>
