--- a/home/wiki/Change_log/v4.5.7.1706.html
+++ b/home/wiki/Change_log/v4.5.7.1706.html
@@ -231,7 +231,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/house">https://en.wiktionary.org/wiki/house</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/house" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/house</a>
       </dd>
     </dl>
     <ul>
