--- a/home/wiki/Change_log/v4.6.0.1903.html
+++ b/home/wiki/Change_log/v4.6.0.1903.html
@@ -65,7 +65,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Add templatestyles to html.head.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikiversity.org/wiki/WikiJournal_Preprints/Binary_search_algorithm">https://en.wikiversity.org/wiki/WikiJournal_Preprints/Binary_search_algorithm</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikiversity.org/wiki/WikiJournal_Preprints/Binary_search_algorithm" rel="nofollow" class="external free">https://en.wikiversity.org/wiki/WikiJournal_Preprints/Binary_search_algorithm</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/314" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/314</a>
@@ -194,7 +194,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Pull 0th argument if %1 is specified and 0 groups.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/Wiktionary:Scripts">https://en.wiktionary.org/wiki/Wiktionary:Scripts</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/Wiktionary:Scripts" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/Wiktionary:Scripts</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/393" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/393</a>
@@ -400,7 +400,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Replace underscores with spaces in subpages.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikiversity.org/wiki/Computer-aided_design/Software">https://en.wikiversity.org/wiki/Computer-aided_design/Software</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikiversity.org/wiki/Computer-aided_design/Software" rel="nofollow" class="external free">https://en.wikiversity.org/wiki/Computer-aided_design/Software</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/308" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/308</a>
@@ -413,7 +413,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikiversity.org/wiki/Computer-aided_design/Software">https://en.wikiversity.org/wiki/Computer-aided_design/Software</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikiversity.org/wiki/Computer-aided_design/Software" rel="nofollow" class="external free">https://en.wikiversity.org/wiki/Computer-aided_design/Software</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/308" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/308</a>
@@ -429,7 +429,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Do not hzip anchors with invalid href.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikiversity.org/wiki/Research_in_programming_Wikidata/Banks">https://en.wikiversity.org/wiki/Research_in_programming_Wikidata/Banks</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikiversity.org/wiki/Research_in_programming_Wikidata/Banks" rel="nofollow" class="external free">https://en.wikiversity.org/wiki/Research_in_programming_Wikidata/Banks</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/311" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/311</a>
@@ -455,7 +455,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Pass count into category msg .
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikiversity.org/wiki/WikiJournal_Preprints/Binary_search_algorithm">https://en.wikiversity.org/wiki/WikiJournal_Preprints/Binary_search_algorithm</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikiversity.org/wiki/WikiJournal_Preprints/Binary_search_algorithm" rel="nofollow" class="external free">https://en.wikiversity.org/wiki/WikiJournal_Preprints/Binary_search_algorithm</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/316" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/316</a>
@@ -646,7 +646,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Change div_view_fmtr to be sitename aware.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikiversity.org/wiki/">https://en.wikiversity.org</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikiversity.org" rel="nofollow" class="external free">https://en.wikiversity.org</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/313" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/313</a>
@@ -837,7 +837,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Increment math uid.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikiversity.org/wiki/Electric_Circuit_Analysis/Passive_Sign_Convention">https://en.wikiversity.org/wiki/Electric_Circuit_Analysis/Passive_Sign_Convention</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikiversity.org/wiki/Electric_Circuit_Analysis/Passive_Sign_Convention" rel="nofollow" class="external free">https://en.wikiversity.org/wiki/Electric_Circuit_Analysis/Passive_Sign_Convention</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/375" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/375</a>
