--- a/home/wiki/Change_log/v4.6.2.1907.html
+++ b/home/wiki/Change_log/v4.6.2.1907.html
@@ -359,7 +359,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikiversity.org/wiki/Web_Science/Part2:_Emerging_Web_Properties/Hearding_Behavior/Summary,_Further_readings,_Homework">https://en.wikiversity.org/wiki/Web_Science/Part2:_Emerging_Web_Properties/Hearding_Behavior/Summary,_Further_readings,_Homework</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikiversity.org/wiki/Web_Science/Part2:_Emerging_Web_Properties/Hearding_Behavior/Summary,_Further_readings,_Homework" rel="nofollow" class="external free">https://en.wikiversity.org/wiki/Web_Science/Part2:_Emerging_Web_Properties/Hearding_Behavior/Summary,_Further_readings,_Homework</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/475" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/475</a>
