--- a/home/wiki/Dashboard/Import/Online.html
+++ b/home/wiki/Dashboard/Import/Online.html
@@ -145,7 +145,7 @@
           <a href="xowa-cmd:app.setup.cmds.dump_add_many('species.wikimedia.org'%2C%20'latest'%2C%20'pages-articles'%2C%20'wiki.custom').owner.run;">download<img src="file:///C:/xowa/bin/any/xowa/file/app.general/xowa_exec.png"></a>
         </td>
         <td>
-          <a href="/site/species.wikimedia.org/wiki/">http://species.wikimedia.org</a>
+          <a href="http://species.wikimedia.org" rel="nofollow" class="external free">http://species.wikimedia.org</a>
         </td>
         <td>
         </td>
@@ -271,7 +271,7 @@
           <a href="xowa-cmd:app.setup.cmds.dump_add_many('en.wiktionary.org'%2C%20'latest'%2C%20'pages-articles'%2C%20'wiki.custom').owner.run;">download<img src="file:///C:/xowa/bin/any/xowa/file/app.general/xowa_exec.png"></a>
         </td>
         <td>
-          <a href="/site/en.wiktionary.org/wiki/">http://en.wiktionary.org</a>
+          <a href="http://en.wiktionary.org" rel="nofollow" class="external free">http://en.wiktionary.org</a>
         </td>
         <td>
           English
@@ -349,7 +349,7 @@
           <a href="xowa-cmd:app.setup.cmds.dump_add_many('en.wikiversity.org'%2C%20'latest'%2C%20'pages-articles'%2C%20'wiki.custom').owner.run;">download<img src="file:///C:/xowa/bin/any/xowa/file/app.general/xowa_exec.png"></a>
         </td>
         <td>
-          <a href="/site/en.wikiversity.org/wiki/">http://en.wikiversity.org</a>
+          <a href="http://en.wikiversity.org" rel="nofollow" class="external free">http://en.wikiversity.org</a>
         </td>
         <td>
           English
@@ -375,7 +375,7 @@
           <a href="xowa-cmd:app.setup.cmds.dump_add_many('en.wikiquote.org'%2C%20'latest'%2C%20'pages-articles'%2C%20'wiki.custom').owner.run;">download<img src="file:///C:/xowa/bin/any/xowa/file/app.general/xowa_exec.png"></a>
         </td>
         <td>
-          <a href="/site/en.wikiquote.org/wiki/">http://en.wikiquote.org</a>
+          <a href="http://en.wikiquote.org" rel="nofollow" class="external free">http://en.wikiquote.org</a>
         </td>
         <td>
           English
@@ -401,7 +401,7 @@
           <a href="xowa-cmd:app.setup.cmds.dump_add_many('en.wikinews.org'%2C%20'latest'%2C%20'pages-articles'%2C%20'wiki.custom').owner.run;">download<img src="file:///C:/xowa/bin/any/xowa/file/app.general/xowa_exec.png"></a>
         </td>
         <td>
-          <a href="/site/en.wikinews.org/wiki/">http://en.wikinews.org</a>
+          <a href="http://en.wikinews.org" rel="nofollow" class="external free">http://en.wikinews.org</a>
         </td>
         <td>
           English
@@ -1077,7 +1077,7 @@
           <a href="xowa-cmd:app.setup.cmds.dump_add_many('it.wikipedia.org'%2C%20'latest'%2C%20'pages-articles'%2C%20'wiki.custom').owner.run;">download<img src="file:///C:/xowa/bin/any/xowa/file/app.general/xowa_exec.png"></a>
         </td>
         <td>
-          <a href="/site/it.wikipedia.org/wiki/">http://it.wikipedia.org</a>
+          <a href="http://it.wikipedia.org" rel="nofollow" class="external free">http://it.wikipedia.org</a>
         </td>
         <td>
           Italian
@@ -1285,7 +1285,7 @@
           <a href="xowa-cmd:app.setup.cmds.dump_add_many('ja.wikipedia.org'%2C%20'latest'%2C%20'pages-articles'%2C%20'wiki.custom').owner.run;">download<img src="file:///C:/xowa/bin/any/xowa/file/app.general/xowa_exec.png"></a>
         </td>
         <td>
-          <a href="/site/ja.wikipedia.org/wiki/">http://ja.wikipedia.org</a>
+          <a href="http://ja.wikipedia.org" rel="nofollow" class="external free">http://ja.wikipedia.org</a>
         </td>
         <td>
           Japanese
@@ -6589,7 +6589,7 @@
           <a href="xowa-cmd:app.setup.cmds.dump_add_many('he.wikipedia.org'%2C%20'latest'%2C%20'pages-articles'%2C%20'wiki.custom').owner.run;">download<img src="file:///C:/xowa/bin/any/xowa/file/app.general/xowa_exec.png"></a>
         </td>
         <td>
-          <a href="/site/he.wikipedia.org/wiki/">http://he.wikipedia.org</a>
+          <a href="http://he.wikipedia.org" rel="nofollow" class="external free">http://he.wikipedia.org</a>
         </td>
         <td>
           Hebrew
