--- a/home/wiki/Change_log/v3.10.4.1.html
+++ b/home/wiki/Change_log/v3.10.4.1.html
@@ -121,7 +121,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Remove nil element from table when nil is 1st member.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/%E4%BB%9A">https://en.wiktionary.org/wiki/仚</a> <a href="/site/en.wiktionary.org/wiki/%E4%BB%9B">https://en.wiktionary.org/wiki/仛</a><a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj" id="xolnki_4" title="Diagnostics/Scribunto/Luaj" class="xowa-visited">Diagnostics/Scribunto/Luaj</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/仚" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/仚</a> <a href="https://en.wiktionary.org/wiki/仛" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/仛</a><a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj" id="xolnki_4" title="Diagnostics/Scribunto/Luaj" class="xowa-visited">Diagnostics/Scribunto/Luaj</a>
       </dd>
     </dl>
     <ul>
@@ -178,7 +178,7 @@
         <span style='font-variant:small-caps'>Example</span>: category={{{2}}}.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikinews.org/wiki/Egypt">https://en.wikinews.org/wiki/Egypt</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikinews.org/wiki/Egypt" rel="nofollow" class="external free">https://en.wikinews.org/wiki/Egypt</a>
       </dd>
     </dl>
     <ul>
@@ -188,7 +188,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikinews.org/wiki/Egypt">https://en.wikinews.org/wiki/Egypt</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikinews.org/wiki/Egypt" rel="nofollow" class="external free">https://en.wikinews.org/wiki/Egypt</a>
       </dd>
     </dl>
     <ul>
@@ -275,7 +275,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikinews.org/wiki/Egypt">https://en.wikinews.org/wiki/Egypt</a> <a href="/site/en.wikinews.org/wiki/Template:Topic_cat/latest">https://en.wikinews.org/wiki/Template:Topic_cat/latest</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikinews.org/wiki/Egypt" rel="nofollow" class="external free">https://en.wikinews.org/wiki/Egypt</a> <a href="https://en.wikinews.org/wiki/Template:Topic_cat/latest" rel="nofollow" class="external free">https://en.wikinews.org/wiki/Template:Topic_cat/latest</a>
       </dd>
     </dl>
     <ul>
