--- a/home/wiki/Change_log/v3.11.2.1.html
+++ b/home/wiki/Change_log/v3.11.2.1.html
@@ -231,7 +231,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Always reload page when going back / forward on wikinews (do not use cached html).
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikinews.org/wiki/">https://en.wikinews.org/wiki</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikinews.org/wiki" rel="nofollow" class="external free">https://en.wikinews.org/wiki</a>
       </dd>
     </dl>
     <ul>
