--- a/home/wiki/Change_log/v4.5.2.1704.html
+++ b/home/wiki/Change_log/v4.5.2.1704.html
@@ -150,7 +150,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: If gsub_replace lua proc returns nothing, do not replace with empty string.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/tracer">https://en.wiktionary.org/wiki/tracer</a> <a href="/site/en.wiktionary.org/wiki/bitter">https://en.wiktionary.org/wiki/bitter</a> <a href="/site/en.wiktionary.org/wiki/voir">https://en.wiktionary.org/wiki/voir</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/tracer" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/tracer</a> <a href="https://en.wiktionary.org/wiki/bitter" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/bitter</a> <a href="https://en.wiktionary.org/wiki/voir" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/voir</a>
       </dd>
     </dl>
     <ul>
@@ -166,7 +166,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Add more logic for surrogate pairs (2-length chars).
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/%E5%84%89">https://en.wiktionary.org/wiki/儉</a> <a href="/site/en.wiktionary.org/wiki/%E5%83%AE">https://en.wiktionary.org/wiki/僮</a> <a href="/site/en.wiktionary.org/wiki/%E5%83%89">https://en.wiktionary.org/wiki/僉</a> <a href="/site/en.wiktionary.org/wiki/%E5%83%85">https://en.wiktionary.org/wiki/僅</a> <a href="/site/en.wiktionary.org/wiki/%E4%BD%BB">https://en.wiktionary.org/wiki/佻</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/儉" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/儉</a> <a href="https://en.wiktionary.org/wiki/僮" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/僮</a> <a href="https://en.wiktionary.org/wiki/僉" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/僉</a> <a href="https://en.wiktionary.org/wiki/僅" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/僅</a> <a href="https://en.wiktionary.org/wiki/佻" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/佻</a>
       </dd>
     </dl>
     <ul>
@@ -182,7 +182,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Add only first match for mw.ustring.match, not all of them.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/%D0%B4%D0%B5%D0%B9%D1%81%D1%82%D0%B2%D0%B8%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%BE%D0%B5_%D0%BF%D1%80%D0%B8%D1%87%D0%B0%D1%81%D1%82%D0%B8%D0%B5_%D0%BD%D0%B0%D1%81%D1%82%D0%BE%D1%8F%D1%89%D0%B5%D0%B3%D0%BE_%D0%B2%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D0%B8">https://en.wiktionary.org/wiki/действительное_причастие_настоящего_времени</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/действительное_причастие_настоящего_времени" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/действительное_причастие_настоящего_времени</a>
       </dd>
     </dl>
     <ul>
@@ -285,7 +285,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/tongue-in-chic">https://en.wiktionary.org/tongue-in-chic</a> <a href="/site/en.wiktionary.org/wiki/serve_up">https://en.wiktionary.org/serve_up</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/tongue-in-chic" rel="nofollow" class="external free">https://en.wiktionary.org/tongue-in-chic</a> <a href="https://en.wiktionary.org/serve_up" rel="nofollow" class="external free">https://en.wiktionary.org/serve_up</a>
       </dd>
     </dl>
     <ul>
@@ -318,7 +318,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/%E4%BB%9D">https://en.wiktionary.org/仝</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/仝" rel="nofollow" class="external free">https://en.wiktionary.org/仝</a>
       </dd>
     </dl>
   
