--- a/home/wiki/Change_log/v4.6.5.1911.html
+++ b/home/wiki/Change_log/v4.6.5.1911.html
@@ -130,7 +130,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Redirect formatValue and formatValues to renderSnak and renderSnakValues.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/he.wikipedia.org/wiki/%D7%99%D7%95%D7%91%D7%9C_%D7%A0%D7%90%D7%9E%D7%9F">https://he.wikipedia.org/wiki/יובל_נאמן</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://he.wikipedia.org/wiki/יובל_נאמן" rel="nofollow" class="external free">https://he.wikipedia.org/wiki/יובל_נאמן</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/593" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/593</a>
@@ -146,7 +146,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Do not treat '_' as a SPACE character.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/%D0%B1%D0%B0%D0%B1%D1%8C%D0%B5_%D0%BB%D0%B5%D1%82%D0%BE">https://en.wiktionary.org/wiki/бабье_лето</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/бабье_лето" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/бабье_лето</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/582" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/582</a>
@@ -191,7 +191,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Make table accessible from datawrapper in mw.lua.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/Wiktionary:Japanese_transliteration">https://en.wiktionary.org/wiki/Wiktionary:Japanese_transliteration</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/Wiktionary:Japanese_transliteration" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/Wiktionary:Japanese_transliteration</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/586" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/586</a>
@@ -424,7 +424,7 @@
         <span style='font-variant:small-caps'>Example</span>: A .
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/it.wikipedia.org/wiki/Italo_Toni">https://it.wikipedia.org/wiki/Italo_Toni</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://it.wikipedia.org/wiki/Italo_Toni" rel="nofollow" class="external free">https://it.wikipedia.org/wiki/Italo_Toni</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/567" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/567</a>
@@ -450,7 +450,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Auto-inline dangling references tag.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/tepilli">https://en.wiktionary.org/wiki/tepilli</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/tepilli" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/tepilli</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/583" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/583</a>
@@ -466,7 +466,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Do not assume that Name_ui_w_colon matches Name.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/ja.wikipedia.org/wiki/Template:Stub">https://ja.wikipedia.org/wiki/Template:Stub</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://ja.wikipedia.org/wiki/Template:Stub" rel="nofollow" class="external free">https://ja.wikipedia.org/wiki/Template:Stub</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/594" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/594</a>
@@ -508,7 +508,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Change dynamicPageList to always get categories from cache.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/Category:English_conjunctions">https://en.wiktionary.org/wiki/Category:English_conjunctions</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/Category:English_conjunctions" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/Category:English_conjunctions</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/556" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/556</a>
@@ -521,7 +521,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wiktionary.org/wiki/Category:English_lemmas">https://en.wiktionary.org/wiki/Category:English_lemmas</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/Category:English_lemmas" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/Category:English_lemmas</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/556" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/556</a>
@@ -590,7 +590,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/it.wikipedia.org/wiki/Roma">https://en.wikipedia.org/wiki/it:Roma</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/it.wikipedia.org/wiki/Roma" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/it:Roma</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/600" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/600</a>
