--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -184,7 +184,7 @@
               <a href="http://xowa.org/home/wiki/Dev/Command-line" id="xolnki_25" title="Dev/Command-line">Overview</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps" id="xolnki_26" title="Dev/Command-line/Dumps">Image dumps</a>
+              <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps" id="xolnki_26" title="Dev/Command-line/Dumps" class="xowa-visited">Image dumps</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Dev/Command-line/Wikidata" id="xolnki_27" title="Dev/Command-line/Wikidata">Wikidata</a>
