--- a/home/wiki/Options/HTML_databases.html
+++ b/home/wiki/Options/HTML_databases.html
@@ -121,13 +121,13 @@
     <div id='xowa.wiki.hdumps.read_preferred__name' class='xocfg_itm_name'>Prefer HTML Databases for Read tab</div>
 
     <!-- BTN:undo -->
-    <div id='xowa.wiki.hdumps.read_preferred__undo' data-xocfg-type='bool' class='xocfg_itm_delete xocfg_itm_hide'>
+    <div id='xowa.wiki.hdumps.read_preferred__undo' data-xocfg-type='bool' class='xocfg_itm_delete'>
       <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.wiki.hdumps.read_preferred")' title="reset to &quot;y&quot;">&nbsp;</span>
     </div>
     
     <!-- TEXT:val -->
     <div class='xocfg_itm_data'>
-<input id="xowa.wiki.hdumps.read_preferred" data-xocfg-key="xowa.wiki.hdumps.read_preferred" data-xocfg-type="bool" accesskey="d" class="xocfg_data__bool" type="checkbox" checked="checked"></input></div>
+<input id="xowa.wiki.hdumps.read_preferred" data-xocfg-key="xowa.wiki.hdumps.read_preferred" data-xocfg-type="bool" accesskey="d" class="xocfg_data__bool" type="checkbox"></input></div>
     
     <!-- HIDDEN:key,ctx -->
     <input type='hidden' id='xowa.wiki.hdumps.read_preferred__key_box' value='xowa.wiki.hdumps.read_preferred'></input>
